Add heading to conact form

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ a:hover{
 a.btn.btn.btn-primary:hover {
   background-color: #a37777;
 }
- 
+/* 
  /*Contact Section */
 section.contact-section {
   padding: 300px 0;
