--- a/style.css
+++ b/style.css
@@ -83,6 +83,43 @@ a:hover{
   color:var(--color-link);
 }
 /* Quiz Section */
+.body{
+  font-size: 20px;
+  font-family: 'Poppins',sans-serif;
+  color: #333;
+  font-weight: 300;
+  text-align: center;
+  background-color: #f8f6f0;
+}
+h3{
+  font-weight: 300;
+  margin: 0px;
+  padding: 10px;
+  font-size: 20px;
+}
+.question{
+  font-weight: 600;
+}
+.answers{
+  margin-bottom: 20px;
+}
+.answers label{
+  display: block;
+}
+button{
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  background-color: #279;
+  color: #fff;
+  border: 0px;
+  border-radius: 3px;
+  padding: 20px;
+  cursor: pointer;
+  margin-bottom: 20px;
+}
+button:hover{
+  background-color: #38a;
+}
 .slide {
   position: absolute;
   left: 0px;
