Fix button hover issue. Color changes when you hover it but it should be fixed now

--- a/style.css
+++ b/style.css
@@ -123,6 +123,15 @@ button {
 button:hover {
   background-color: #38a;
 }
+
+.carousel-control-prev:hover {
+  background-color: transparent;
+}
+
+.carousel-control-next:hover {
+  background-color: transparent;
+}
+
 .slide {
   position: relative;
   /* left: 0px;
